# SAP_Estudio

./: .env.example  .gitignore  README.md  pyproject.toml
data/templates/: base_mensual_resiliencia_template.csv  celdas_cliente_producto_template.csv  clientes_jerarquia_template.csv  productos_equipos_jerarquia_template.csv
docs/: bitacora_sap_estudio.md  conversacion_proyecto.md  flujo_sap_vbscript_onedrive_sharepoint.md  google_sites_html_embed.md  plan_trabajo_integracion_ecc_btp.md  sharepoint_pagina_v1.md  tesis_mafi_resiliencia_financiera.md
docs/modelo_datos/: modelo_resiliencia_financiera.md
docs/wsdl/: sap_estudio_clientes_envio_automatico.wsdl  sap_estudio_clientes_facturas.wsdl
notebooks/: 01_notebook.ipynb  01_sap_estudio.ipynb  02_generar_datos_tesis_mafi.ipynb  02_generar_datos_tesis_mafi.py
scripts/: generate_resilience_simulation.py
src/sap_estudio/: __init__.py  config.py  extract.py  sap_client.py  transform.py
tests/: test_transform.py
web/: app.py  google_site_embed_resiliencia.html
web/static/: styles.css
web/templates/: index.html
