[project]
name = "sap-estudio"
version = "0.1.0"
description = "Extraccion de clientes y facturas desde SAP con visualizacion web."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "pytest>=8.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
sap = [
    "pyrfc>=3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
